Working on Scraper page. added a button to scrape

--- a/BlazorScraper/BlazorScraper.csproj
+++ b/BlazorScraper/BlazorScraper.csproj
@@ -23,7 +23,10 @@
     <PackageReference Include="RestSharp" Version="106.6.10" />
     <PackageReference Include="RestSharp.Newtonsoft.Json" Version="1.5.1" />
     <PackageReference Include="Selenium.PhantomJS.WebDriver" Version="2.1.1" />
+    <PackageReference Include="Selenium.WebDriver" Version="3.141.0" />
     <PackageReference Include="Selenium.WebDriver.ChromeDriver" Version="78.0.3904.7000" />
+    <PackageReference Include="Selenium.WebDriver.NetCoreWebDriverFactory" Version="3.0.0" />
+    <PackageReference Include="Selenium.WebDriver.WebDriverFactoryNunitConfig" Version="3.0.0" />
   </ItemGroup>
 
 </Project>
